--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=courseProject
+server.port=8081
+
+spring.datasource.url=jdbc:postgresql://localhost/users
+spring.datasource.username=postgres
+spring.datasource.password=qwerty
+spring.jpa.generate-ddl=true
+
